--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
